--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -4,7 +4,7 @@
 
 <hr>
 
-<form action="/insert_student" method="post">
+<form action="/insert_student" method="post"> 
   <div>
     <label for="email_box">
       Email
@@ -58,7 +58,7 @@
     </th>
   </tr>
 
-  <% @students.eac do |student| %>
+  <% @students.each do |student| %>
     <tr>
       <td>
         <%= student.id %>
@@ -77,7 +77,7 @@
       </td>
 
       <td>
-        <a href="/students/<%= student %>">
+        <a href="/students/<%=student.id%>">
           Show details
         </a>
       </td>
